Fixed Hybrid Sim Parser and interval generator